--- a/dws-multi.yaml
+++ b/dws-multi.yaml
@@ -14,7 +14,7 @@ spec:
     kind: MultiKueueConfig
     name: multikueue-dws
 ---
-apiVersion: kueue.x-k8s.io/v1alpha1
+apiVersion: kueue.x-k8s.io/v1beta1
 kind: MultiKueueConfig
 metadata:
   name: multikueue-dws
@@ -24,7 +24,7 @@ spec:
     - multikueue-dws-worker-us
     - multikueue-dws-worker-eu
 ---
-apiVersion: kueue.x-k8s.io/v1alpha1
+apiVersion: kueue.x-k8s.io/v1beta1
 kind: MultiKueueCluster
 metadata:
   name: multikueue-dws-worker-asia
@@ -34,7 +34,7 @@ spec:
     location: worker-asia-southeast1-secret
 
 ---
-apiVersion: kueue.x-k8s.io/v1alpha1
+apiVersion: kueue.x-k8s.io/v1beta1
 kind: MultiKueueCluster
 metadata:
   name: multikueue-dws-worker-eu
@@ -43,7 +43,7 @@ spec:
     locationType: Secret
     location: worker-eu-west4-secret
 ---
-apiVersion: kueue.x-k8s.io/v1alpha1
+apiVersion: kueue.x-k8s.io/v1beta1
 kind: MultiKueueCluster
 metadata:
   name: multikueue-dws-worker-us
@@ -53,7 +53,7 @@ spec:
     location: worker-us-east4-secret
 
 ---
-apiVersion: kueue.x-k8s.io/v1alpha1
+apiVersion: kueue.x-k8s.io/v1beta1
 kind: MultiKueueCluster
 metadata:
   name: multikueue-dws-worker-asia
